# hmatrix-quadprogpp

./: LICENSE  README.md  hmatrix-quadprogpp.cabal  hmatrix-quadprogxx.cabal
Numeric/Minimization/: QuadProgPP.hs
c++/: binding.cxx
tests/: small.hs
