cabal-version:       2.4
name:                hmatrix-quadprogpp
version:             0.4.0.0
synopsis:            Bindings to the QuadProg++ quadratic programming library
description:
  Bindings to QuadProg++, a C++ library for quadratic programming.
  <https://github.com/liuq/QuadProgpp>
license:             BSD-3-Clause
license-file:        LICENSE
author:              Alex Lang, Takano Akio
maintainer:          Alex Lang <me@alang.ca>
-- copyright:
category:            Math
build-type:          Simple

source-repository head
  type:     git
  location: https://github.com/alang9/hmatrix-quadprogpp.git

library
  ghc-options:         -Wall
  cxx-sources:         c++/binding.cxx
  exposed-modules:     Numeric.Minimization.QuadProgPP
  -- other-modules:
  build-depends:
    , base >= 4.5 && < 5.1
    , hmatrix >= 0.16 && < 0.21
    , vector >= 0.9 && < 0.13
  extra-libraries:     quadprog, stdc++
  default-language: Haskell2010

test-suite small
  type: exitcode-stdio-1.0
  main-is: small.hs
  hs-source-dirs: tests
  build-depends:
    , base
    , hmatrix
    , hmatrix-quadprogpp
    , tasty < 1.5
    , tasty-hunit < 0.11
    , HUnit-approx < 1.2
    , vector
  default-language: Haskell2010
